# Medical_QA_MLOps

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml  demo-down.yml  demo-up.yml  deploy.yml
app/: client.py  streamlit_app.py
docker/: api.Dockerfile  kserve-mock.Dockerfile  pipeline-init.Dockerfile  retrieval.Dockerfile  ui.Dockerfile
docs/: cloud-setup.md
docs/plans/: 2026-06-01-p0-docker-helm-kserve-ci.md  2026-06-01-p0-dvc-mlflow-pipeline.md  2026-06-01-p0-runtime-package.md  2026-06-03-full-mlflow-pipeline.md  2026-06-03-retrieval-contract-sync.md  2026-06-04-contract-version-surfacing.md  2026-06-04-encoder-swap-medembed-small.md  2026-06-04-slim-plan4-gke-cicd.md
docs/runbooks/: dgx-vllm-cloudflare.md  monitoring.md
docs/specs/: 2026-06-01-p0-docker-helm-kserve-ci-design.md  2026-06-03-full-mlflow-pipeline-design.md  2026-06-03-retrieval-contract-sync-design.md  2026-06-04-contract-version-surfacing-design.md  2026-06-04-encoder-swap-medembed-small-design.md  2026-06-04-slim-plan4-gke-cicd-design.md
mlops/: __init__.py  mlflow_register.py
mlops/pipelines/: __init__.py  build_demo_kg.py  build_smoke_kg.py  eval_smoke.py  full_config.py  full_stages.py  profiles.py  run_full.py  stage_runner.py
scripts/: gen_retrieval_golden.py  install_deploy_tools.py
tests/: test_build_demo_kg.py  test_config.py  test_package_imports.py  test_pipeline_tooling.py  test_readme_cloud_docs.py  test_readme_deploy_docs.py  test_readme_pipeline_docs.py
tests/api/: test_app.py  (+4 more)
(+165 files in other folders)
