[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "medical_qa_platform"
version = "0.1.0"
description = "Medical QA MLOps inference platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
# Heavy adapters used only by the retrieval container; never in unit tests.
runtime = [
    "faiss-cpu>=1.8",
    "sentence-transformers>=2.7",
    "numpy>=1.26",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["medical_qa_platform"]
omit = ["*/kg_backend.py", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__", "raise NotImplementedError"]
fail_under = 80
